@@ -37,6 +37,12 @@ static char *cgdb_help_text[] = {
 "    spacebar    -> Sets a breakpoint at the current line number",
 "    b           -> View the previous source file",
 "    f           -> View the next source file",
+"    -           -> Shrink source window 1 line",
+"    =           -> Grow source window 1 line",
+"    _           -> Shrink source window 25%",
+"                   (or, shrink tty window 1 line, if visible)",
+"    +           -> Grow source window 25% ",
+"                   (or, grow tty window 1 line, if visible)",
 "",
 "    Shortcut Commands",
 "    ------------------",
@@ -72,6 +78,24 @@ static char *cgdb_help_text[] = {
 "    :set ignorecase -> Sets searching case insensitive (:set ic)",
 "    :set shortcut   -> Enables shortcut commands typed in source window ",
 "                       (:set sc)",
+"    :set winsplit   -> Set the split point between source and gdb window",
+"                       (especially useful as an init setting in cgdbrc)",
+"                       values={top_full, top_big, even, bottom_big, bottom_full}",
+"                       (:set ws)",
+"    :set tabstop    -> Number of spaces that a <Tab> in the file counts for.",
+"    :set syntax     -> Sets the current highlighting mode of the current file.",
+"                       values={c,ada,off}",
+"                       (:set syn)",
+"    :set escdelay   -> Set the length of time to wait before timing out and ",
+"                       treating the ESC keystroke as the ESC character rather ",
+"                       than combining it with other characters in the buffer to",
+"                       create a key sequence. The variable is measured in ",
+"                       milli seconds. If ESCDELAY is 0, the system immediately ",
+"                       composes the ESCAPE response without waiting for more ",
+"                       information from the buffer. The user may choose any ",
+"                       value between 0 and 10000, inclusive. The default ",
+"                       setting for the ESCDELAY environment variable is 40 ",
+"                       (forty tenths of a second).",
 "",
 "2. At gdb and tty window",
 "------------------------",
@@ -127,6 +151,18 @@ static char *cgdb_help_text[] = {
 "they can type 'Control T'. This will delete all the buffered data",
 "waiting to be read into the debugged program. This might be useful when",
 "you rerun or start a new program.",
+"",
+"Automating Commands in CGDB:",
+"----------------------------",
+"",
+"There may be several features that you find usefull in CGDB. CGDB is capable",
+"of automating any of these commands through the use of the config file called",
+"cgdbrc. It looks in $HOME/.cgdb/cgdbrc for the file. If it exists, CGDB",
+"executes each line in the file in order. It is as if the user typed in all the",
+"commands into the status bar after the tui was initialized.",
+"",
+"Eventually this file will be used to create macros and high level key ",
+"bindings. Until then, it is a very usefull way to automate simple commands.",
 NULL
 };
 
